# voxel-grid-neural-features

./: README.md
voxel_grid_dataset/: README.md  pyproject.toml
voxel_grid_dataset/src/voxel_grid_dataset/: dataset.py  dataset_io.py
voxel_grid_dataset_collection/: CMakeLists.txt  package.xml
voxel_grid_dataset_collection/launch/: collect_dataset_test.launch
voxel_grid_dataset_collection/nodes/: collect_dataset_node.py
voxel_grid_neural_compression/: README.md  pyproject.toml
voxel_grid_neural_compression/scripts/: train.ipynb  train.py
voxel_grid_neural_compression/src/voxel_grid_neural_compression/: neural_netrworks.py
voxel_grid_neural_compression_ros/: CMakeLists.txt  package.xml
voxel_grid_neural_compression_ros/launch/: test_network.launch
voxel_grid_neural_compression_ros/nodes/: test_network.py
